--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -1,4 +1,8 @@
 @import 'tailwindcss';
+@import "@skeletonlabs/skeleton";
+@import "@skeletonlabs/skeleton/optional/presets";
+@import "@skeletonlabs/skeleton/themes/hamlindigo";
+@source "../node_modules/@skeletonlabs/skeleton-svelte/dist";
 
 @config '../tailwind.config.ts';
 
